<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bottom_sheet_bg_white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvTile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/satoshi_bold"
        android:text="@string/informasi"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:id="@+id/tvDesc"
        android:textColor="@color/black_80"
        android:fontFamily="@font/satoshi_regular"
        android:text="@string/tenang_kamu_bisa_login_lagi_kapan_aja"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:id="@+id/btnOke"
        android:textColor="@color/main"
        android:backgroundTint="@color/blue_ff"
        android:text="@string/oke"
        android:fontFamily="@font/satoshi_bold"
        android:textSize="16sp"
        android:layout_marginTop="30dp"/>

</LinearLayout>