<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/bottom_sheet_bg_white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/iv_success_register" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:fontFamily="@font/satoshi_bold"
        android:text="@string/registrasi_berhasil"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:gravity="center"
        android:textColor="@color/black_80"
        android:fontFamily="@font/satoshi_regular"
        android:text="@string/silahkan_masuk_untuk_melanjutkan"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:id="@+id/btnLogin"
        android:textColor="@color/white"
        android:backgroundTint="@color/main"
        android:text="@string/masuk"
        android:fontFamily="@font/satoshi_bold"
        android:textSize="16sp"
        android:layout_marginTop="30dp"/>

</LinearLayout>