<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/bottom_sheet_bg_white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>


    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="150dp"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/success_anim"
        android:layout_gravity="center"
        android:layout_height="150dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:fontFamily="@font/satoshi_bold"
        android:text="@string/pengajuan_terkirim"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/black_80"
        android:fontFamily="@font/satoshi_regular"
        android:text="@string/submission_success_message"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:id="@+id/btnOke"
        android:textColor="@color/white"
        android:backgroundTint="@color/main"
        android:text="@string/oke"
        android:fontFamily="@font/satoshi_bold"
        android:textSize="16sp"
        android:layout_marginTop="30dp"/>

</LinearLayout>