<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bottom_sheet_bg_white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvTile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/satoshi_bold"
        android:text="@string/filter"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:hint="@string/tanggal_mulai"
            android:layout_weight="1"
            style="@style/text_input_layout_default_style"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                style="@style/text_field_default_style"
                android:inputType="text"
                android:focusable="false"
                android:clickable="true"
                android:cursorVisible="false"
                android:layout_marginRight="20dp"
                android:id="@+id/etStartDate"
                android:maxLines="1"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:hint="@string/tanggal_akhir"
            android:layout_weight="1"
            style="@style/text_input_layout_default_style"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                style="@style/text_field_default_style"
                android:inputType="text"
                android:id="@+id/etEndDate"
                android:maxLines="1"
                android:focusable="false"
                android:clickable="true"
                android:cursorVisible="false"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:paddingVertical="15dp"
        android:paddingHorizontal="8dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/bg_spinner"
        android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/spinner"
            style="@style/SpinnerTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:id="@+id/btnOke"
        android:textColor="@color/main"
        android:backgroundTint="@color/blue_ff"
        android:text="@string/filter"
        android:fontFamily="@font/satoshi_bold"
        android:textSize="16sp"
        android:layout_marginTop="30dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:id="@+id/btnReset"
        android:textColor="@color/black"
        android:backgroundTint="@color/gray_eb"
        android:text="@string/hapus_filter"
        android:fontFamily="@font/satoshi_bold"
        android:textSize="16sp"
        android:layout_marginTop="10dp"/>


</LinearLayout>